configfile/y.output
Grammar

    0 $accept: config $end

    1 config: config decl '\n'
    2       | config stream_decl '\n'
    3       | config '\n'
    4       | /* empty */

    5 numeric: NUMBER
    6        | HEXNUMBER
    7        | FLOAT

    8 decl: IDENTIFIER '=' numeric
    9     | IDENTIFIER '=' buffer

   10 buffer: numeric numeric
   11       | buffer numeric

   12 stream_ident: NUMBER '.' IDENTIFIER

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric
   14            | stream_ident '=' numeric ',' STRING ',' TYPE ',' numeric ',' numeric
   15            | stream_ident '=' numeric


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 3
',' (44) 13 14
'.' (46) 12
'=' (61) 8 9 13 14 15
error (256)
IDENTIFIER (258) 8 9 12
FLOAT (259) 7
NUMBER (260) 5 12
HEXNUMBER (261) 6
STRING (262) 13 14
TYPE (263) 13 14
DEF1 (264)
DEF2 (265)
DEF3 (266)


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
config (17)
    on left: 1 2 3 4, on right: 0 1 2 3
numeric (18)
    on left: 5 6 7, on right: 8 10 11 13 14 15
decl (19)
    on left: 8 9, on right: 1
buffer (20)
    on left: 10 11, on right: 9 11
stream_ident (21)
    on left: 12, on right: 13 14 15
stream_decl (22)
    on left: 13 14 15, on right: 2


state 0

    0 $accept: . config $end

    $default  reduce using rule 4 (config)

    config  go to state 1


state 1

    0 $accept: config . $end
    1 config: config . decl '\n'
    2       | config . stream_decl '\n'
    3       | config . '\n'

    $end        shift, and go to state 2
    IDENTIFIER  shift, and go to state 3
    NUMBER      shift, and go to state 4
    '\n'        shift, and go to state 5

    decl          go to state 6
    stream_ident  go to state 7
    stream_decl   go to state 8


state 2

    0 $accept: config $end .

    $default  accept


state 3

    8 decl: IDENTIFIER . '=' numeric
    9     | IDENTIFIER . '=' buffer

    '='  shift, and go to state 9


state 4

   12 stream_ident: NUMBER . '.' IDENTIFIER

    '.'  shift, and go to state 10


state 5

    3 config: config '\n' .

    $default  reduce using rule 3 (config)


state 6

    1 config: config decl . '\n'

    '\n'  shift, and go to state 11


state 7

   13 stream_decl: stream_ident . '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric
   14            | stream_ident . '=' numeric ',' STRING ',' TYPE ',' numeric ',' numeric
   15            | stream_ident . '=' numeric

    '='  shift, and go to state 12


state 8

    2 config: config stream_decl . '\n'

    '\n'  shift, and go to state 13


state 9

    8 decl: IDENTIFIER '=' . numeric
    9     | IDENTIFIER '=' . buffer

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    numeric  go to state 17
    buffer   go to state 18


state 10

   12 stream_ident: NUMBER '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 19


state 11

    1 config: config decl '\n' .

    $default  reduce using rule 1 (config)


state 12

   13 stream_decl: stream_ident '=' . numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric
   14            | stream_ident '=' . numeric ',' STRING ',' TYPE ',' numeric ',' numeric
   15            | stream_ident '=' . numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    numeric  go to state 20


state 13

    2 config: config stream_decl '\n' .

    $default  reduce using rule 2 (config)


state 14

    7 numeric: FLOAT .

    $default  reduce using rule 7 (numeric)


state 15

    5 numeric: NUMBER .

    $default  reduce using rule 5 (numeric)


state 16

    6 numeric: HEXNUMBER .

    $default  reduce using rule 6 (numeric)


state 17

    8 decl: IDENTIFIER '=' numeric .
   10 buffer: numeric . numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    $default  reduce using rule 8 (decl)

    numeric  go to state 21


state 18

    9 decl: IDENTIFIER '=' buffer .
   11 buffer: buffer . numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    $default  reduce using rule 9 (decl)

    numeric  go to state 22


state 19

   12 stream_ident: NUMBER '.' IDENTIFIER .

    $default  reduce using rule 12 (stream_ident)


state 20

   13 stream_decl: stream_ident '=' numeric . ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric
   14            | stream_ident '=' numeric . ',' STRING ',' TYPE ',' numeric ',' numeric
   15            | stream_ident '=' numeric .

    ','  shift, and go to state 23

    $default  reduce using rule 15 (stream_decl)


state 21

   10 buffer: numeric numeric .

    $default  reduce using rule 10 (buffer)


state 22

   11 buffer: buffer numeric .

    $default  reduce using rule 11 (buffer)


state 23

   13 stream_decl: stream_ident '=' numeric ',' . STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric
   14            | stream_ident '=' numeric ',' . STRING ',' TYPE ',' numeric ',' numeric

    STRING  shift, and go to state 24


state 24

   13 stream_decl: stream_ident '=' numeric ',' STRING . ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric
   14            | stream_ident '=' numeric ',' STRING . ',' TYPE ',' numeric ',' numeric

    ','  shift, and go to state 25


state 25

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' . TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric
   14            | stream_ident '=' numeric ',' STRING ',' . TYPE ',' numeric ',' numeric

    TYPE  shift, and go to state 26


state 26

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE . ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric
   14            | stream_ident '=' numeric ',' STRING ',' TYPE . ',' numeric ',' numeric

    ','  shift, and go to state 27


state 27

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' . STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric
   14            | stream_ident '=' numeric ',' STRING ',' TYPE ',' . numeric ',' numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16
    STRING     shift, and go to state 28

    numeric  go to state 29


state 28

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING . ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric

    ','  shift, and go to state 30


state 29

   14 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' numeric . ',' numeric

    ','  shift, and go to state 31


state 30

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' . numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    numeric  go to state 32


state 31

   14 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' numeric ',' . numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    numeric  go to state 33


state 32

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric . ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric

    ','  shift, and go to state 34


state 33

   14 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' numeric ',' numeric .

    $default  reduce using rule 14 (stream_decl)


state 34

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' . numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    numeric  go to state 35


state 35

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric . ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric

    ','  shift, and go to state 36


state 36

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' . numeric ',' numeric ',' numeric ',' numeric ',' numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    numeric  go to state 37


state 37

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric . ',' numeric ',' numeric ',' numeric ',' numeric

    ','  shift, and go to state 38


state 38

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' . numeric ',' numeric ',' numeric ',' numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    numeric  go to state 39


state 39

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric . ',' numeric ',' numeric ',' numeric

    ','  shift, and go to state 40


state 40

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' . numeric ',' numeric ',' numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    numeric  go to state 41


state 41

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric . ',' numeric ',' numeric

    ','  shift, and go to state 42


state 42

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' . numeric ',' numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    numeric  go to state 43


state 43

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric . ',' numeric

    ','  shift, and go to state 44


state 44

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' . numeric

    FLOAT      shift, and go to state 14
    NUMBER     shift, and go to state 15
    HEXNUMBER  shift, and go to state 16

    numeric  go to state 45


state 45

   13 stream_decl: stream_ident '=' numeric ',' STRING ',' TYPE ',' STRING ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric ',' numeric .

    $default  reduce using rule 13 (stream_decl)
